update to internal commit 4122f55c

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -75,19 +75,19 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ### Changelog
 
-In this version, the SDK has been refactored under the `DynamsoftCaptureVision` (DCV) architecture. To learn more about the architecture, please see [Architecture of Dynamsoft Capture Vision](https://www.dynamsoft.com/capture-vision/docs/core/architecture/){:target="_blank"}. The following highlights the major changes: 
+In this version, the SDK has been refactored under the `DynamsoftCaptureVision` (DCV) architecture. To learn more about the architecture, please see [Architecture of Dynamsoft Capture Vision](https://www.dynamsoft.com/capture-vision/docs/core/architecture/). The following highlights the major changes: 
 
 * The class `BarcodeReader` and `BarcodeScanner` are removed and its functionalities are now incorporated into the newly added Class `CaptureVisionRouter`.
 
 * License-related functions are handled by class [Dynamsoft.License.LicenseManager]({{ site.dcv_js_api }}license/license-manager.html#initLicense).
 
-* Camera-related functions are handled by [DynamsoftCameraEnhancer(DCE)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/){:target="_blank"}. Please note that the following features are grouped together as enhanced features that require a license:
+* Camera-related functions are handled by [DynamsoftCameraEnhancer(DCE)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/). Please note that the following features are grouped together as enhanced features that require a license:
   * Enhanced-focus.
   * Auto-zoom.
   * Tap-to-focus.
 
-* This version of `BarcodeReader` only accepts `DynamsoftCameraEnhancer(DCE)` version 4.0.1 and above, which has been refactored to be compliant with the [ImageSourceAdapter (ISA) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/input.html#image-source-adapter){:target="_blank"}, as a valid image source.
+* This version of `BarcodeReader` only accepts `DynamsoftCameraEnhancer(DCE)` version 4.0.1 and above, which has been refactored to be compliant with the [ImageSourceAdapter (ISA) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/input.html#image-source-adapter), as a valid image source.
 
-* Decoded barcode results are returned via the [CapturedResultReceiver (CRR) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/output.html#captured-result-receiver){:target="_blank"}.
+* Decoded barcode results are returned via the [CapturedResultReceiver (CRR) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/output.html#captured-result-receiver).
 
 * For the full list of API changes, please refer to the [v9 to v10 Upgrade Guide](../upgrade-guide/9to10.md).
