--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -232,7 +232,7 @@ The following properties are replaced by similar properties under `SimplifiedCap
 
 | RuntimeSettings Property | SimplifiedCaptureVisionSettings Parameter | Template File Parameter |
 | ------------------------------- | ----------------------------------------- | ----------------------- |
-| `region` | [`roi`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roi) & [`roiMeasuredInPercentage`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roimeasuredinpercentage) | [`TargetROIDef.Location.Offset`]({{ site.dcv_parameters }}target-roi-def/location.html?product=dbr&repoType=core){:target="_blank"} |
+| `region` | [`roi`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roi) & [`roiMeasuredInPercentage`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roimeasuredinpercentage) | [`TargetROIDef.Location.Offset`]({{ site.dcv_parameters }}target-roi-def/location.html?product=dbr&repoType=core) |
 | `timeout` | **Deprecated and no longer available** | **Deprecated and no longer available** |
 
 #### Migrate to SimplifiedBarcodeReaderSettings
@@ -241,15 +241,15 @@ The following properties are replaced by similar properties under `SimplifiedBar
 
 | RuntimeSettings Property | SimplifiedBarcodeReaderSettings Property | Template File Parameter |
 | ------------------------------- | ----------------------------------------- | ----------------------- |
-| `minBarcodeTextLength` | [`minBarcodeTextLength`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minbarcodetextlength) | [`BarcodeFormatSpecification.BarcodeTextLengthRangeArray`]({{ site.dcv_parameters }}barcode-format-specification/barcode-text-length-range-array.html?product=dbr&repoType=core){:target="_blank"} |
-| `minResultConfidence` | [`minResultConfidence`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minresultconfidence) | [`BarcodeFormatSpecification.MinResultConfidence`]({{ site.dcv_parameters }}barcode-format-specification/min-result-confidence.html?product=dbr&repoType=core){:target="_blank"} |
-| `localizationModes` | [`localizationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#localizationmodes) | [`BarcodeReaderTaskSetting.LocationModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/localization-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `expectedBarcodesCount` | [`expectedBarcodesCount`](../api-reference/interfaces/simplified-barcode-reader-settings.md#expectedbarcodescount) | [`BarcodeReaderTaskSetting.ExpectedBarcodesCount`]({{ site.dcv_parameters }}barcode-reader-task-settings/expected-barcodes-count.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeFormatIds` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeFormatIds_2` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
-| `deblurModes` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `deblurLevel` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `maxAlgorithmThreadCount` | [`maxThreadsInOneTask`]({{ site.dbr_cpp_api }}simplified-barcode-reader-settings.html#maxthreadsinonetask) | [`BarcodeReaderTaskSetting.MaxThreadsInOneTask`]({{ site.dcv_parameters }}barcode-reader-task-settings/max-threads-in-one-task.html?product=dbr&repoType=core){:target="_blank"} |
+| `minBarcodeTextLength` | [`minBarcodeTextLength`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minbarcodetextlength) | [`BarcodeFormatSpecification.BarcodeTextLengthRangeArray`]({{ site.dcv_parameters }}barcode-format-specification/barcode-text-length-range-array.html?product=dbr&repoType=core) |
+| `minResultConfidence` | [`minResultConfidence`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minresultconfidence) | [`BarcodeFormatSpecification.MinResultConfidence`]({{ site.dcv_parameters }}barcode-format-specification/min-result-confidence.html?product=dbr&repoType=core) |
+| `localizationModes` | [`localizationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#localizationmodes) | [`BarcodeReaderTaskSetting.LocationModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/localization-modes.html?product=dbr&repoType=core) |
+| `expectedBarcodesCount` | [`expectedBarcodesCount`](../api-reference/interfaces/simplified-barcode-reader-settings.md#expectedbarcodescount) | [`BarcodeReaderTaskSetting.ExpectedBarcodesCount`]({{ site.dcv_parameters }}barcode-reader-task-settings/expected-barcodes-count.html?product=dbr&repoType=core) |
+| `barcodeFormatIds` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core) |
+| `barcodeFormatIds_2` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core) |
+| `deblurModes` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core) |
+| `deblurLevel` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core) |
+| `maxAlgorithmThreadCount` | [`maxThreadsInOneTask`]({{ site.dbr_cpp_api }}simplified-barcode-reader-settings.html#maxthreadsinonetask) | [`BarcodeReaderTaskSetting.MaxThreadsInOneTask`]({{ site.dcv_parameters }}barcode-reader-task-settings/max-threads-in-one-task.html?product=dbr&repoType=core) |
 
 > Remarks:
 >
@@ -258,8 +258,8 @@ The following properties are replaced by similar properties under `SimplifiedBar
 
 | FurtherModes Property | SimplifiedBarcodeReaderSettings Property | Template File Parameter |
 | ---------------------- | ----------------------------------------- | ----------------------- |
-| `grayscaleTransformationModes` | [`grayscaleTransformationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaletransformationmodes) | [`ImageParameter.GrayscaleTransformationModes`]({{ site.dcv_parameters }}image-parameter/grayscale-enhancement-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `imagePreprocessingModes` | [`grayscaleEnhancementModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaleenhancementmodes) | [`ImageParameter.GrayscaleEnhancementModes`]({{ site.dcv_parameters }}image-parameter/grayscale-transformation-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `grayscaleTransformationModes` | [`grayscaleTransformationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaletransformationmodes) | [`ImageParameter.GrayscaleTransformationModes`]({{ site.dcv_parameters }}image-parameter/grayscale-enhancement-modes.html?product=dbr&repoType=core) |
+| `imagePreprocessingModes` | [`grayscaleEnhancementModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaleenhancementmodes) | [`ImageParameter.GrayscaleEnhancementModes`]({{ site.dcv_parameters }}image-parameter/grayscale-transformation-modes.html?product=dbr&repoType=core) |
 
 > Remarks: The mode `IPM_MORPHOLOGY` of `imagePreprocessingModes` is migrated to `BinarizationModes`. The mode arguments `MorphOperation`, `MorphOperationKernelSizeX`, `MorphOperationKernelSizeY`, `MorphShape` are now available for all modes of `BinarizationModes`.
 
@@ -269,24 +269,24 @@ So far, we mentioned the settings that have been included in the *SimplifiedCapt
 
 | RuntimeSettings Property | Template File Parameter |
 | ------------------------------- | ----------------------- |
-| `scaleDownThreshold` | [`ImageParameter.ScaleDownThreshold`]({{ site.dcv_parameters }}image-parameter/scale-down-threshold.html?product=dbr&repoType=core){:target="_blank"} |
-| `binarizationModes` | [`ImageParameter.BinarizationModes`]({{ site.dcv_parameters }}image-parameter/binarization-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `textResultOrderModes` | [`BarcodeReaderTaskSetting.TextResultOrderModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/text-result-order-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `returnBarcodeZoneClarity` | [`BarcodeReaderTaskSetting.ReturnBarcodeZoneClarity`]({{ site.dcv_parameters }}barcode-reader-task-settings/return-barcode-zone-clarity.html?product=dbr&repoType=core){:target="_blank"} |
-| `scaleUpModes` | [`ImageParameter.ScaleUpModes`]({{ site.dcv_parameters }}image-parameter/scale-up-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeZoneMinDistanceToImageBorders` | [`BarcodeFormatSpecification.BarcodeZoneMinDistanceToImageBorders`]({{ site.dcv_parameters }}barcode-format-specification/barcode-zone-min-distance-to-image-borders.html?product=dbr&repoType=core){:target="_blank"} |
-| `terminatePhase` | [`BarcodeReaderTaskSetting.TerminateSettings`]({{ site.dcv_parameters }}barcode-reader-task-settings/terminate-setting.html?product=dbr&repoType=core){:target="_blank"} |
+| `scaleDownThreshold` | [`ImageParameter.ScaleDownThreshold`]({{ site.dcv_parameters }}image-parameter/scale-down-threshold.html?product=dbr&repoType=core) |
+| `binarizationModes` | [`ImageParameter.BinarizationModes`]({{ site.dcv_parameters }}image-parameter/binarization-modes.html?product=dbr&repoType=core) |
+| `textResultOrderModes` | [`BarcodeReaderTaskSetting.TextResultOrderModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/text-result-order-modes.html?product=dbr&repoType=core) |
+| `returnBarcodeZoneClarity` | [`BarcodeReaderTaskSetting.ReturnBarcodeZoneClarity`]({{ site.dcv_parameters }}barcode-reader-task-settings/return-barcode-zone-clarity.html?product=dbr&repoType=core) |
+| `scaleUpModes` | [`ImageParameter.ScaleUpModes`]({{ site.dcv_parameters }}image-parameter/scale-up-modes.html?product=dbr&repoType=core) |
+| `barcodeZoneMinDistanceToImageBorders` | [`BarcodeFormatSpecification.BarcodeZoneMinDistanceToImageBorders`]({{ site.dcv_parameters }}barcode-format-specification/barcode-zone-min-distance-to-image-borders.html?product=dbr&repoType=core) |
+| `terminatePhase` | [`BarcodeReaderTaskSetting.TerminateSettings`]({{ site.dcv_parameters }}barcode-reader-task-settings/terminate-setting.html?product=dbr&repoType=core) |
 
 | FurtherModes Property | Template File Parameter |
 | ---------------------- | ----------------------- |
-| `colourConversionModes` | [`ImageParameter.ColourConversionModes`]({{ site.dcv_parameters }}image-parameter/colour-conversion-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `regionPredetectionModes` | [`ImageParameter.RegionPredetectionModes`]({{ site.dcv_parameters }}image-parameter/region-predetection-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `textureDetectionModes` | [`ImageParameter.TextureDetectionModes`]({{ site.dcv_parameters }}image-parameter/texture-detection-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `textFilterModes` | [`ImageParameter.TextDetectionMode`]({{ site.dcv_parameters }}image-parameter/text-detection-mode.html?product=dbr&repoType=core){:target="_blank"} & [`ImageParameter.IfEraseTextZone`]({{ site.dcv_parameters }}image-parameter/if-erase-text-zone.html?product=dbr&repoType=core){:target="_blank"} |
-| `dpmCodeReadingModes` | [`BarcodeReaderTaskSetting.DPMCodeReadingModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/dpm-code-reading-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `deformationResistingModes` | [`BarcodeReaderTaskSetting.DeformationResistingModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deformation-resisting-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeComplementModes` | [`BarcodeReaderTaskSetting.BarcodeComplementModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-complement-modes.html?product=dbr&repoType=core){:target="_blank"} |
-| `barcodeColourModes` | [`BarcodeReaderTaskSetting.BarcodeColourModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-colour-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `colourConversionModes` | [`ImageParameter.ColourConversionModes`]({{ site.dcv_parameters }}image-parameter/colour-conversion-modes.html?product=dbr&repoType=core) |
+| `regionPredetectionModes` | [`ImageParameter.RegionPredetectionModes`]({{ site.dcv_parameters }}image-parameter/region-predetection-modes.html?product=dbr&repoType=core) |
+| `textureDetectionModes` | [`ImageParameter.TextureDetectionModes`]({{ site.dcv_parameters }}image-parameter/texture-detection-modes.html?product=dbr&repoType=core) |
+| `textFilterModes` | [`ImageParameter.TextDetectionMode`]({{ site.dcv_parameters }}image-parameter/text-detection-mode.html?product=dbr&repoType=core) & [`ImageParameter.IfEraseTextZone`]({{ site.dcv_parameters }}image-parameter/if-erase-text-zone.html?product=dbr&repoType=core) |
+| `dpmCodeReadingModes` | [`BarcodeReaderTaskSetting.DPMCodeReadingModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/dpm-code-reading-modes.html?product=dbr&repoType=core) |
+| `deformationResistingModes` | [`BarcodeReaderTaskSetting.DeformationResistingModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/deformation-resisting-modes.html?product=dbr&repoType=core) |
+| `barcodeComplementModes` | [`BarcodeReaderTaskSetting.BarcodeComplementModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-complement-modes.html?product=dbr&repoType=core) |
+| `barcodeColourModes` | [`BarcodeReaderTaskSetting.BarcodeColourModes`]({{ site.dcv_parameters }}barcode-reader-task-settings/barcode-colour-modes.html?product=dbr&repoType=core) |
 
 
 ## Other API changes
