docs: Update js-10.md -> update release notes of DBR JS 10.4.2000

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -13,92 +13,65 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ## 10.4.2000 (10/10/2024)
 
-### Highlights
+### New
 
-- Improved the read rate and the speed of the following barcode formats:
-  - EAN13
-  - DotCode
 - Added support for decoding add-on codes (also known as Extension Codes) for UPC-A, UPC-E, EAN-8 and EAN-13 codes.
 
-### DynamsoftCaptureVisionRouter
+  <div align="center">
+    <p><img src="../assets/img/add-on-barcodes.png" width="60%" alt="add-on-barcodes"></p>
+  </div>
 
-#### Improved
-
-- Updated the error handling logic of `capturing` & `startCapturing` methods. The methods will be able to clearly report where the error occurred if the capturing fails due to an licensing issue.
-
-#### New
-
-- Added internal logics for usage count.
-- Added a new callback function `OnRawTextLinesReceived` to the class `IntermediateResultReceiver`.
-- Add `EnumPresetTemplate` for all preset template names
-
-### DynamsoftCore
-
-#### Improved
-
-- Updated the path auto-filling mechanism to reduce non-essential path definitions.
-
-#### New
-
-- Added new error codes
-  - -10076: The license is initialized successfully but detected invalid content in your key.
-  - -30063: [Barcode Reader] No license found.
-- Added a new enumeration member `IRUT_RAW_TEXT_LINES` to the `EnumIntermediateResultUnitType`.
-
-### DynamsoftLicense
-
-#### Improved
-
-- Updated the error message of `initLicense` method. The methods will returns more detailed messages when failed to initialized the license. Warnings will be available if license initialization is successful but a part of the license key is invalid.
-- Updated the duplicate license error handling mechanism. After successfully creating an instance, setting the same license again will no longer cause exception.
-
-#### New
-
-- Add a new charge way, `TimeSliceCount`.
-
-### DynamsoftImageProcessing
-
-#### Fixed
-
-- Fixed a crash bug caused by the usage of RegEx.
-- Small fixes and tweaks.
-
-### DynamsoftUtility
-
-#### Fixed
-
-- Fixed a bug where `CaptureVisionRouter.startCapturing` would erroneously halt the fetching process when its status was running, leading to an unnecessary stop and restart of the fetching operation.
-
-### DynamsoftBarcodeReader
-
-#### Improved
-
-- Improved the read rate and the speed of the following barcode formats:
-  - EAN13
-  - DotCode
-
-#### New
-
-- Added internal logics for usage count.
-- Added support for decoding add-on barcodes.
-- Added new properties to the `QRCodeDetails` class
+- Added new properties to the `QRCodeDetails` interface including:
   - `dataMaskPattern`
   - `codewords`
 
-#### Changed
+### Improved
 
-- Updated the Enumeration number of `EnumBarcodeFormat.BF_ALL` to 0xFFFFFFFEFFFFFFFF.
-- Updated the internal logic of licensing error message reporting.
+- Improved the read rate and processing speed for the following barcode formats:
+  - EAN-13
+  - DotCode
 
-#### Fixed
+### Changed
 
-- Fixed a bug that might cause `GS1_DATABAR_EXPANDED_STACKED` barcode unread.
+- Updated the enumeration value of `EnumBarcodeFormat.BF_ALL` to `0xFFFFFFFEFFFFFFFF`, extending support to non-standard barcodes.
 
-### DynamsoftCameraEnhancer
+### Fixed
 
-#### New
+- Fixed a bug that could prevent the reading of `GS1_DATABAR_EXPANDED_STACKED` barcodes.
 
-- A new preset UI template has been added, which is available for use and modification.
+### Changes to other support modules
+
+#### DynamsoftCameraEnhancer
+
+- A new preset UI template has been added, which can be used and modified as needed.
+
+#### DynamsoftCaptureVisionRouter
+
+- Updated error handling logic for the `capturing` and `startCapturing` methods to clearly report errors specifically related to licensing issues.
+- Added a new callback function, `OnRawTextLinesReceived`, to the `IntermediateResultReceiver` interface.
+- Added `EnumPresetTemplate`, an enumeration of all preset template names.
+
+#### DynamsoftCore
+
+- Updated the path auto-filling mechanism to reduce non-essential path definitions.
+- Added new error codes
+  - -10076: The license is initialized successfully but detected invalid content in the key.
+  - -30063: [Barcode Reader] No license found.
+- Added a new enumeration member `IRUT_RAW_TEXT_LINES` to the `EnumIntermediateResultUnitType`.
+
+#### DynamsoftLicense
+
+- Introduced a new charging method, `TimeSliceCount`, which tracks usage based on time.
+- Improved duplicate license handling: after successfully creating an instance, setting the same license again no longer causes an exception.
+- Updated the error messages for the `initLicense` method, providing more detailed feedback if license initialization fails. Warnings are now shown if the license is initialized successfully but part of the key is invalid.
+
+#### DynamsoftImageProcessing
+
+- Fixed a crash caused by the use of `RegEx`.
+
+#### DynamsoftUtility
+
+- Fixed an issue where the method `CaptureVisionRouter.startCapturing()` would mistakenly halt the fetching process when running, resulting in unnecessary stops and restarts.
 
 ## 10.2.10 (04/03/2024)
 
