--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -18,7 +18,7 @@ permalink: /programming/javascript/release-notes/js-10.html
 - Added support for decoding add-on codes (also known as Extension Codes) for UPC-A, UPC-E, EAN-8 and EAN-13 codes.
 
   <div align="center">
-    <p><img src="../assets/img/add-on-barcodes.png" width="60%" alt="add-on-barcodes"></p>
+    <p><img src="https://www.dynamsoft.com/barcode-reader/docs/core/assets/img/add-on-barcodes.png" width="60%" alt="add-on-barcodes"></p>
   </div>
 
 - Added new properties to the `QRCodeDetails` interface including:
