--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -53,7 +53,7 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 #### DynamsoftCore
 
-- Updated the path auto-filling mechanism to reduce non-essential path definitions.
+- Optimized the path auto-filling mechanism, now allowing the definition of only the root path without the need to separately define the resource file locations for each submodule. Read more about [engineResourcePaths](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/core/core-module-class.html?product=dbr&lang=javascript#engineresourcepaths).
 - Added new error codes
   - -10076: The license is initialized successfully but detected invalid content in the key.
   - -30063: [Barcode Reader] No license found.
