--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -33,7 +33,7 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ### Changed
 
-- Updated the enumeration value of `EnumBarcodeFormat.BF_ALL` to `0xFFFFFFFEFFFFFFFF`, extending support to non-standard barcodes.
+- Updated the enumeration value of `EnumBarcodeFormat.BF_ALL` to `0xFFFFFFFEFFFFFFFF`, which now does not include non-standard barcodes.
 
 ### Fixed
 
