--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -11,13 +11,7 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
-## 10.4.2001 (10/11/2024)
-
-### Fixed
-
-- Fixed the issue where the rootPath definition in `engineResourcePaths` failed to function correctly in certain scenarios.
-
-## 10.4.2000 (10/10/2024)
+## 10.4.2001 (10/17/2024)
 
 ### New
 
@@ -39,7 +33,7 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ### Changed
 
-- Updated the enumeration value of `EnumBarcodeFormat.BF_ALL` to `0xFFFFFFFEFFFFFFFF`, extending support to non-standard barcodes.
+- Updated the enumeration value of `EnumBarcodeFormat.BF_ALL` to `0xFFFFFFFEFFFFFFFF`, which no longer includes non-standard barcodes.
 
 ### Fixed
 
