update to internal commit c431c804

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -102,11 +102,11 @@ permalink: /programming/javascript/release-notes/js-10.html
   - `EC_AXIS_DEFINITION_INCORRECT`
   - `EC_TEXT_LINE_GROUP_LAYOUT_CONFLICT`
   - `EC_TEXT_LINE_GROUP_REGEX_CONFLICT`
-- Added [`ObservationParameters`]({{ site.dcv_js_api }}core/intermediate-results/observation-parameters.html) interface for allowing the configuration of intermediate result observation.
-- Added a new call back function [`onShortLinesUnitReceived`]({{ site.dcv_js_api }}capture-vision-router/intermediate-result-receiver.html#onshortlinesunitreceived) to the `IntermediateResultReceiver` class.
+- Added [`ObservationParameters`]({{ site.dcvb_js_api }}core/intermediate-results/observation-parameters.html) interface for allowing the configuration of intermediate result observation.
+- Added a new call back function [`onShortLinesUnitReceived`]({{ site.dcvb_js_api }}capture-vision-router/intermediate-result-receiver.html#onshortlinesunitreceived) to the `IntermediateResultReceiver` class.
 - Added a new supported image pixel format, binary 8 inverted. The corresponding enumeration member is added to the [`EnumImagePixelFormat`]({{ site.enums }}core/image-pixel-format.html?lang=js).
-- Update [`MultiFrameResultCrossFilter`]({{ site.dcv_js_api }}utility/multi-frame-result-cross-filter.html) class to allow string type for resultItemType.
-- Update [`TextZonesUnit`]({{ site.dcv_js_api }}/core/intermediate-results/text-zones-unit.html) interface, now using [`TextZone`]({{ site.dcv_js_api }}/core/basic-structures/text-zone.html) interface to record text zone data.
+- Update [`MultiFrameResultCrossFilter`]({{ site.dcvb_js_api }}utility/multi-frame-result-cross-filter.html) class to allow string type for resultItemType.
+- Update [`TextZonesUnit`]({{ site.dcvb_js_api }}/core/intermediate-results/text-zones-unit.html) interface, now using [`TextZone`]({{ site.dcvb_js_api }}/core/basic-structures/text-zone.html) interface to record text zone data.
 - Update [`CandidateBarcodeZonesUnit`]({{ site.js_api }}interfaces/candidate-barcode-zones-unit.html) interface, now using [`CandidateBarcodeZone`]({{ site.js_api }}interfaces/candidate-barcode-zone.html) to record candidate barcode zone data instead of `Quadrilateral`.
 - Update [`DeformationResistedBarcodeImageUnit`]({{ site.js_api }}interfaces/deformation-resisted-barcode-image-unit.html) interface, now using [`DeformationResistedBarcode`]({{ site.js_api }}interfaces/deformation-resisted-barcode.html) interface to record deformation resisted barcode data.
 
@@ -120,12 +120,12 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 #### Breaking Changes
 
-- The interface [`CapturedResult`]({{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result.html) is migrated from `DynamsoftCore` module to `DynamsoftCaptureVisionRouter` module.
-- Changed the logic of the `capturedResultItemTypes` setting of [`SimplifiedCaptureVisionSettings`]({{ site.dcv_js_api }}capture-vision-router/interfaces/simplified-capture-vision-settings.html):
-  - If the result item types don't match the specified template, the method [`updateSettings`]({{ site.dcv_js_api }}capture-vision-router/settings.html#updatesettings) will return the error code `EC_PARAMETER_VALUE_INVALID` with the message "The captured result item types do not match the task configurations in the template".
+- The interface [`CapturedResult`]({{ site.dcvb_js_api }}capture-vision-router/interfaces/captured-result.html) is migrated from `DynamsoftCore` module to `DynamsoftCaptureVisionRouter` module.
+- Changed the logic of the `capturedResultItemTypes` setting of [`SimplifiedCaptureVisionSettings`]({{ site.dcvb_js_api }}capture-vision-router/interfaces/simplified-capture-vision-settings.html):
+  - If the result item types don't match the specified template, the method [`updateSettings`]({{ site.dcvb_js_api }}capture-vision-router/settings.html#updatesettings) will return the error code `EC_PARAMETER_VALUE_INVALID` with the message "The captured result item types do not match the task configurations in the template".
   - Based on the `capturedResultItemTypes` setting, the irrelevant tasks will be removed from the template.
-  - The `capturedResultItemTypes` should include at least one of the `CRIT_BARCODE`, `CRIT_TEXT_LINE`, `CRIT_DETECTED_QUAD`, `CRIT_NORMALIZED_IMAGE`. Otherwise, the method [`updateSettings`]({{ site.dcv_js_api }}capture-vision-router/settings.html#updatesettings) will return the error code `EC_PARAMETER_VALUE_INVALID` with the message "The captured result item types should contain at least one task result type".
-- Refactored the [`Contour`]({{ site.dcv_js_api }}core/basic-structures/contour.html) interface. Please view API reference - `Contour` interface for more information.
+  - The `capturedResultItemTypes` should include at least one of the `CRIT_BARCODE`, `CRIT_TEXT_LINE`, `CRIT_DETECTED_QUAD`, `CRIT_NORMALIZED_IMAGE`. Otherwise, the method [`updateSettings`]({{ site.dcvb_js_api }}capture-vision-router/settings.html#updatesettings) will return the error code `EC_PARAMETER_VALUE_INVALID` with the message "The captured result item types should contain at least one task result type".
+- Refactored the [`Contour`]({{ site.dcvb_js_api }}core/basic-structures/contour.html) interface. Please view API reference - `Contour` interface for more information.
 
 ## 10.0.21 (02/05/2024)
 
@@ -141,7 +141,7 @@ In this version, the SDK has been refactored under the `DynamsoftCaptureVision` 
 
 * The class `BarcodeReader` and `BarcodeScanner` are removed and its functionalities are now incorporated into the newly added Class `CaptureVisionRouter`.
 
-* License-related functions are handled by class [Dynamsoft.License.LicenseManager]({{ site.dcv_js_api }}license/license-manager.html#initLicense).
+* License-related functions are handled by class [Dynamsoft.License.LicenseManager]({{ site.dcvb_js_api }}license/license-manager.html#initLicense).
 
 * Camera-related functions are handled by [DynamsoftCameraEnhancer(DCE)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/). Please note that the following features are grouped together as enhanced features that require a license:
   * Enhanced-focus.
