--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -11,6 +11,13 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
+
+## 10.4.3100 (12/31/2024)
+
+### Fixed
+
+- Fixed a bug that could cause a crash when using specific templates.
+
 ## 10.4.2002 (10/24/2024)
 
 ### New
