update to internal commit a7a79449

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -12,11 +12,23 @@ permalink: /programming/javascript/release-notes/js-10.html
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
 
-## 10.4.3100 (12/31/2024)
+## 10.4.3100 (01/03/2025)
+
+### New
+
+- Added the `getParameterTemplateCount` and `getParameterTemplateName` functions to the `CaptureVisionRouter` class to improve accessibility and usability of templates.
+<!-- - Added to-the-latest overlapping feature. You can use `enableLatestOverlapping` function of `MultiFrameResultCrossFilter` class to enable this feature. -->
 
 ### Fixed
 
 - Fixed a bug that could cause a crash when using specific templates.
+- Fixed a bug in DPM mode where the `isMirrored` value in the `BarcodeResultItem` was not correctly assigned.
+- Fixed a bug where DotCode could not be decoded in certain scenarios.
+
+### Changed
+
+- Removed the `LineExtractionModes` parameter and replaced it with `ShortlineDetectionMode` and `LineAssemblyMode` for more flexible and precise configuration.
+
 
 ## 10.4.2002 (10/24/2024)
 
