update to internal commit 825c1820

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -16,19 +16,14 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ### New
 
-- Added the `getParameterTemplateCount` and `getParameterTemplateName` functions to the `CaptureVisionRouter` class to improve accessibility and usability of templates.
-<!-- - Added to-the-latest overlapping feature. You can use `enableLatestOverlapping` function of `MultiFrameResultCrossFilter` class to enable this feature. -->
+- Added the `ShortlineDetectionMode` and `LineAssemblyMode` parameters for more flexible and precise configuration.
+- Added the `getTemplateNames` function to the `CaptureVisionRouter` class to improve accessibility and usability of templates.
 
 ### Fixed
 
 - Fixed a bug that could cause a crash when using specific templates.
 - Fixed a bug in DPM mode where the `isMirrored` value in the `BarcodeResultItem` was not correctly assigned.
 - Fixed a bug where DotCode could not be decoded in certain scenarios.
-
-### Changed
-
-- Removed the `LineExtractionModes` parameter and replaced it with `ShortlineDetectionMode` and `LineAssemblyMode` for more flexible and precise configuration.
-
 
 ## 10.4.2002 (10/24/2024)
 
