update to internal commit aa18bc52

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -16,8 +16,8 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 ### New
 
-- Added the `ShortlineDetectionMode` and `LineAssemblyMode` parameters for more flexible and precise configuration.
-- Added the `getTemplateNames` function to the `CaptureVisionRouter` class to improve accessibility and usability of templates.
+- Added the [`ShortlineDetectionMode`]({{ site.dcvb_parameters }}barcode-reader-task-settings/short-line-detection-mode.html) and [`LineAssemblyMode`]({{ site.dcvb_parameters }}barcode-reader-task-settings/line-assembly-mode.html) parameters for more flexible and precise configuration.
+- Added the [`getTemplateNames`]({{ site.dcvb_js_api }}capture-vision-router/settings.html#gettemplatenames) function to the `CaptureVisionRouter` class to improve accessibility and usability of templates.
 
 ### Fixed
 
