update to internal commit 1c1de721

--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -11,6 +11,23 @@ permalink: /programming/javascript/release-notes/js-10.html
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
+## 10.5.3000 (04/24/2025)
+
+### New
+
+- Introduced [BarcodeScanner](https://dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/barcode-scanner.html) class
+  - Offers high-level APIs that provide core functionalities
+  - Includes pre-built UI for fast and seamless integration
+  - Features intuitive configuration objects to simplify both algorithm and UI setup
+
+<p align="center">
+  <img src="../user-guide/assets/barcodeScanner_single_mode.png" alt="multiple" width="35%" style="margin-right: 50px;"/>
+  <img src="../user-guide/assets/barcodeScanner_multiple_mode.png" alt="multiple" width="35%"/>
+</p>
+
+### Improved
+
+- Merged resource files previously required by the Barcode-Reader-Bundle, significantly reduced the overall size of the `.wasm` file
 
 ## 10.4.3100 (01/03/2025)
 
