update to internal commit e424277c

--- a/programming/javascript/upgrade-guide/10to11.md
+++ b/programming/javascript/upgrade-guide/10to11.md
@@ -22,7 +22,7 @@ In version 10.0.21 and earlier versions, you may need to reference several modul
 <script src="https://cdn.jsdelivr.net/npm/dynamsoft-camera-enhancer@4.0.1/dist/dce.js"></script>
 ```
 
-In version 11.0.3000 and above, you can also just use this line for simplicity:
+For versions after 10.0.21 but before 11.x, you only need to update the version number of `dynamsoft-barcode-reader-bundle`.
 
 ```html
 <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.0.3000/dist/dbr.bundle.js"></script>
